tests/backend/checkmach/test_attribute_error_duplicate.ml
let[@zero_alloc strict][@zero_alloc strict] test1 x = x,x
let[@zero_alloc strict assume][@zero_alloc strict] test2 x = x,x
let[@zero_alloc strict check] test3 x = x,x
